@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -64,7 +64,7 @@ final class Summary extends Command {
 
     @Override
     public List<String> getOptionSyntax() {
-        return Collections.singletonList("<file>");
+        return List.of("<file>");
     }
 
     @Override
@@ -92,7 +92,7 @@ final class Summary extends Command {
         long totalDuration = 0;
         long chunks = 0;
 
-        try (RecordingInput input = new RecordingInput(p.toFile(), FileAccess.UNPRIVILIGED)) {
+        try (RecordingInput input = new RecordingInput(p.toFile(), FileAccess.UNPRIVILEGED)) {
             ChunkHeader first = new ChunkHeader(input);
             ChunkHeader ch = first;
             String eventPrefix = Type.EVENT_NAME_PREFIX;
@@ -120,6 +120,10 @@ final class Summary extends Command {
                     int size = input.readInt();
                     long eventTypeId = input.readLong();
                     Statistics s = stats.get(eventTypeId);
+                    if (s == null) {
+                        s = new Statistics(eventTypeId + " (missing event metadata)");
+                        stats.put(eventTypeId, s);
+                    }
                     if (s != null) {
                         s.count++;
                         s.size += size;
@@ -138,7 +142,6 @@ final class Summary extends Command {
             println(" Chunks: " + chunks);
             println(" Start: " + DATE_FORMAT.format(Instant.ofEpochSecond(epochSeconds, adjustNanos)) + " (UTC)");
             println(" Duration: " + (totalDuration + 500_000_000) / 1_000_000_000 + " s");
-
             List<Statistics> statsList = new ArrayList<>(stats.values());
             Collections.sort(statsList, (u, v) -> Long.compare(v.count, u.count));
             println();
