@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 
 /*
  * @test
- * @key gc
+ * @key randomness
  *
  * @summary converted from VM Testbase gc/gctests/WeakReferenceGC.
  * VM Testbase keywords: [gc, nonconcurrent]
@@ -82,7 +82,6 @@
  *
  * @library /vmTestbase
  *          /test/lib
- * @run driver jdk.test.lib.FileInstaller . .
  * @run main/othervm
  *      gc.gctests.WeakReferenceGC.WeakReferenceGC
  *      -numList 50
@@ -171,13 +170,13 @@ public class WeakReferenceGC extends ThreadedGCTest {
         private void parseTestParams(String args[]) {
                 for (int i = 0; i < args.length; i++) {
                         if (args[i].compareTo("-numList") == 0) {
-                                numLists = new Integer(args[++i]).intValue();
+                                numLists = Integer.valueOf(args[++i]).intValue();
                         } else if (args[i].compareTo("-qFactor") == 0) {
-                                qFactor = new Float(args[++i]).floatValue();
+                                qFactor = Float.valueOf(args[++i]).floatValue();
                         } else if (args[i].compareTo("-gcCount") == 0) {
-                                gcCount = new Integer(args[++i]).intValue();
+                                gcCount = Integer.valueOf(args[++i]).intValue();
                         } else if (args[i].compareTo("-iter") == 0) {
-                                loopCount = new Integer(args[++i]).intValue();
+                                loopCount = Integer.valueOf(args[++i]).intValue();
                                 // } else {
                                 // System.err.println("usage : " +
                                 // "java WeakReferenceGC [-numList <n>] " +
@@ -202,11 +201,12 @@ public class WeakReferenceGC extends ThreadedGCTest {
                         if (GarbageUtils.eatMemory(getExecutionController()) == 0) {
                                 return; // We were unable to provoke OOME before timeout is over
                         }
-                        numEnqueued = 0; // We set counter to zero to avoid counting references twice
-                        for (int i = 0; i < numLists; i++) {
-                                if (wholder[i].isEnqueued()) {
+                        try {
+                                while ((numEnqueued < numLists) &&
+                                       (refQueue.remove(1000) != null)) {
                                         numEnqueued++;
                                 }
+                        } catch (InterruptedException ie) {
                         }
                 }
                 results.addElement((new Statistic(iter, numEnqueued)));
