@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,14 +36,13 @@
 
 /*
  * @test
- * @key gc
+ * @key randomness
  *
  * @summary converted from VM Testbase gc/gctests/gctest03.
  * VM Testbase keywords: [gc]
  *
  * @library /vmTestbase
  *          /test/lib
- * @run driver jdk.test.lib.FileInstaller . .
  * @compile Tree.java appthread.java
  * @run main/othervm gc.gctests.gctest03.gctest03 10000
  */
@@ -58,8 +57,6 @@ import nsk.share.TestBug;
 //import Tree;
 //import Redthread;
 //import Bluethread;
-//import LocalRandom;
-import java.util.Random;
 
 public class gctest03 extends TestBase {
         private String[] args;
@@ -74,7 +71,7 @@ public class gctest03 extends TestBase {
 
                 if (args.length > 0) {
                         try {
-                                dataNodeLimit = new Integer(args[0]).intValue();
+                                dataNodeLimit = Integer.valueOf(args[0]).intValue();
                         } catch (NumberFormatException e) {
                                 throw new TestBug("Bad input to gctest03. Expected integer, " +
                                                 " got: ->" + args[0] + "<-", e);
