@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,23 +21,43 @@
  * questions.
  */
 
+/*
+ * @test
+ *
+ * @modules java.base/jdk.internal.org.objectweb.asm:+open java.base/jdk.internal.org.objectweb.asm.util:+open
+ * @library /vmTestbase /test/lib
+ *
+ * @comment build retransform.jar in current dir
+ * @run driver vm.runtime.defmeth.shared.BuildJar
+ *
+ * @run driver jdk.test.lib.FileInstaller . .
+ *
+ * @run main/othervm/native
+ *      -agentlib:redefineClasses
+ *      -javaagent:retransform.jar
+ *      vm.runtime.defmeth.StressTest
+ */
 package vm.runtime.defmeth;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+
 import nsk.share.TestFailure;
 import nsk.share.test.StressOptions;
 import nsk.share.test.Stresser;
 import vm.runtime.defmeth.shared.Constants;
 import vm.runtime.defmeth.shared.DefMethTest;
 import vm.runtime.defmeth.shared.ExecutionMode;
-import vm.runtime.defmeth.shared.builder.TestBuilder;
 import vm.share.options.Option;
 import vm.share.options.OptionSupport;
 import vm.share.options.Options;
+import jdk.test.lib.Utils;
+
 import static jdk.internal.org.objectweb.asm.Opcodes.*;
+import static vm.runtime.defmeth.shared.DefMethTest.MAX_MAJOR_VER;
+import static vm.runtime.defmeth.shared.DefMethTest.MIN_MAJOR_VER;
 
 /*
  * Stress test for default methods implementation.
@@ -54,13 +74,10 @@ public class StressTest implements Runnable {
     private StressOptions opts = new StressOptions();
 
     @Option(name="seed", default_value="0", description="force deterministic behavior")
-    private int seed;
+    private long seed;
 
-    @Option(name="redefine", default_value="false", description="use scenarios w/ class redefinition")
-    private boolean doRedefine;
-
-    @Option(name="ver", default_value="49", description="minimum class file version to be used in the tests")
-    private int minMajorVer;
+    @Option(name="noredefine", default_value="false", description="skip scenarios w/ class redefinition")
+    private boolean noRedefine;
 
     @Option(name="ignoreTestFailures", default_value="false", description="ignore failures of the executed tests")
     private boolean ignoreTestFailures;
@@ -72,7 +89,7 @@ public class StressTest implements Runnable {
         private Throwable reason;
         private volatile long executedTests = 0;
 
-        public Worker(String id, int seed) {
+        public Worker(String id, long seed) {
             setName(id);
             this.rand = new Random(seed);
         }
@@ -139,23 +156,18 @@ public class StressTest implements Runnable {
     }
 
     private void configureTests() {
-        int[] majorVerValues = new int[52 - minMajorVer + 1];
+        int[] majorVerValues = new int[MAX_MAJOR_VER - MIN_MAJOR_VER + 1];
         for (int i = 0; i< majorVerValues.length; i++) {
-            majorVerValues[i] = minMajorVer + i;
+            majorVerValues[i] = MIN_MAJOR_VER + i;
         }
 
-        int[] flagsValues = new int[] {
-            0,
-            ACC_STRICT,
-            ACC_SYNCHRONIZED,
-            ACC_STRICT | ACC_SYNCHRONIZED
-        };
+        int[] flagsValues = new int[] {0, ACC_SYNCHRONIZED};
 
         boolean[] doRedefineValues;
-        if (doRedefine) {
-            doRedefineValues = new boolean[] { true, false};
-        } else {
+        if (noRedefine) {
             doRedefineValues = new boolean[] { false };
+        } else {
+            doRedefineValues = new boolean[] { false, true };
         }
 
         // Upper limit for test count
@@ -187,20 +199,18 @@ public class StressTest implements Runnable {
                             }
 
                             try {
-                                DefMethTest test = testClass.newInstance();
+                                DefMethTest test = testClass.getDeclaredConstructor().newInstance();
 
                                 OptionSupport.setup(test, new String[] {
                                         "-execMode", mode.toString(),
                                         "-ver", Integer.toString(majorVer),
                                         "-flags", Integer.toString(flags),
                                         "-redefine", Boolean.toString(redefine),
-                                        "-ignoreCrashes",
-                                        "-ignoreKnownFailures",
                                         "-silent",
                                         "-failfast"});
 
                                 testlist.add(test);
-                            } catch (InstantiationException | IllegalAccessException ex) {
+                            } catch (ReflectiveOperationException ex) {
                                 throw new TestFailure(ex);
                             }
                         }
@@ -215,25 +225,11 @@ public class StressTest implements Runnable {
     private void startWorkers() {
         Random rand;
         if (seed == 0) {
-            seed = (new Random()).nextInt();
+            seed = Utils.SEED;
         }
 
         System.out.printf("Seed: %d\n", seed);
         rand = new Random(seed);
-
-        //Workaround for the deadlock caused by
-        // JDK-7122142: "(ann) Race condition between isAnnotationPresent and getAnnotations"
-        try {
-            // Do a warm-up cycle
-            for (Class<? extends DefMethTest> testClass : DefMethTest.getTests()) {
-                DefMethTest test = testClass.newInstance();
-
-                OptionSupport.setupAndRun(test,
-                        new String[] { "-silent", "-ignoreKnownFailures"});
-            }
-        } catch(InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
 
         int threadsCount = opts.getThreadsFactor();
         if (threadsCount == 1) {
@@ -247,7 +243,7 @@ public class StressTest implements Runnable {
         for (int i = 0; i < workers.length; i++) {
             workers[i] = new Worker(
                     String.format("Worker #%d/%d", i+1, workers.length),
-                    rand.nextInt());
+                    rand.nextLong());
         }
 
         for (Worker worker : workers) {
