@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,10 @@
 
 /*
  * @test
+ * @bug 8246774
  * @summary Basic test that serializes and deserializes a number of records
- * @compile --enable-preview -source ${jdk.version} BasicRecordSer.java
- * @run testng/othervm --enable-preview BasicRecordSer
- * @run testng/othervm/java.security.policy=empty_security.policy --enable-preview BasicRecordSer
+ * @run testng BasicRecordSer
+ * @run testng/othervm/java.security.policy=empty_security.policy BasicRecordSer
  */
 
 import java.io.ByteArrayInputStream;
@@ -125,6 +125,20 @@ public class BasicRecordSer {
     @Test(dataProvider = "serializable")
     public void testSerializable(Object objToSerialize) throws Exception {
         out.println("\n---");
+        out.println("serializing : " + objToSerialize);
+        var objDeserialized = serializeDeserialize(objToSerialize);
+        out.println("deserialized: " + objDeserialized);
+        assertEquals(objToSerialize, objDeserialized);
+        assertEquals(objDeserialized, objToSerialize);
+    }
+
+    /** Tests serializing and deserializing of local records. */
+    @Test
+    public void testLocalRecord() throws Exception {
+        out.println("\n---");
+        record Point(int x, int y) implements Serializable { }
+        record Rectangle(Point bottomLeft, Point topRight) implements Serializable { }
+        var objToSerialize = new Rectangle(new Point(0, 1), new Point (5, 6));
         out.println("serializing : " + objToSerialize);
         var objDeserialized = serializeDeserialize(objToSerialize);
         out.println("deserialized: " + objDeserialized);
