@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,23 +23,21 @@
 
 /*
  * @test
+ * @bug 8246774
  * @summary Basic tests for prohibited magic serialPersistentFields
  * @library /test/lib
  * @modules java.base/jdk.internal.org.objectweb.asm
- * @compile --enable-preview -source ${jdk.version} SerialPersistentFieldsTest.java
- * @run testng/othervm --enable-preview SerialPersistentFieldsTest
+ * @run testng SerialPersistentFieldsTest
  */
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.ObjectStreamClass;
 import java.io.ObjectStreamField;
 import java.io.Serializable;
-import java.io.UncheckedIOException;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
@@ -64,7 +62,6 @@ import static org.testng.Assert.assertTrue;
  * Checks that the serialPersistentFields declaration is effectively ignored.
  */
 public class SerialPersistentFieldsTest {
-    private static final String VERSION = Integer.toString(Runtime.version().feature());
 
     ClassLoader serializableRecordLoader;
 
@@ -85,8 +82,7 @@ public class SerialPersistentFieldsTest {
     public void setup() {
         {  // R1
             byte[] byteCode = InMemoryJavaCompiler.compile("R1",
-                    "public record R1 () implements java.io.Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record R1 () implements java.io.Serializable { }");
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("s", String.class),
                     new ObjectStreamField("i", int.class),
@@ -98,8 +94,7 @@ public class SerialPersistentFieldsTest {
         }
         {  // R2
             byte[] byteCode = InMemoryJavaCompiler.compile("R2",
-                    "public record R2 (int x) implements java.io.Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record R2 (int x) implements java.io.Serializable { }");
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("s", String.class)
             };
@@ -108,8 +103,7 @@ public class SerialPersistentFieldsTest {
         }
         {  // R3
             byte[] byteCode = InMemoryJavaCompiler.compile("R3",
-                    "public record R3 (int x, int y) implements java.io.Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record R3 (int x, int y) implements java.io.Serializable { }");
             ObjectStreamField[] serialPersistentFields = new ObjectStreamField[0];
             byteCode = addSerialPersistentFields(byteCode, serialPersistentFields);
             serializableRecordLoader = new ByteCodeLoader("R3", byteCode, serializableRecordLoader);
@@ -117,8 +111,7 @@ public class SerialPersistentFieldsTest {
         {  // R4
             byte[] byteCode = InMemoryJavaCompiler.compile("R4",
                     "import java.io.Serializable;" +
-                    "public record R4<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record R4<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }");
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("v", String.class)
             };
@@ -134,8 +127,7 @@ public class SerialPersistentFieldsTest {
                     "    }\n" +
                     "    @Override public void readExternal(ObjectInput in) {\n" +
                     "        throw new AssertionError(\"should not reach here\");\n" +
-                    "    }  }",
-                    "--enable-preview", "-source", VERSION);
+                    "    }  }");
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("v", String.class)
             };
@@ -229,13 +221,6 @@ public class SerialPersistentFieldsTest {
         ClassReader reader = new ClassReader(classBytes);
         ClassWriter writer = new ClassWriter(reader, COMPUTE_MAXS | COMPUTE_FRAMES);
         reader.accept(new SerialPersistentFieldsVisitor(writer, spf), 0);
-        try {
-            FileOutputStream fos = new FileOutputStream("R1.class");
-            fos.write(writer.toByteArray());
-            fos.close();
-        } catch (IOException ioe) {
-            throw new UncheckedIOException(ioe);
-        }
         return writer.toByteArray();
     }
 
@@ -246,7 +231,7 @@ public class SerialPersistentFieldsTest {
         final ObjectStreamField[] spf;
         String className;
         SerialPersistentFieldsVisitor(ClassVisitor cv, ObjectStreamField[] spf) {
-            super(ASM7, cv);
+            super(ASM8, cv);
             this.spf = spf;
         }
         @Override
