@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -35,7 +33,7 @@ import jdk.management.jfr.RecordingInfo;
  * @key jfr
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
- * @run main/othervm jdk.jfr.jmx.TestGetRecordings
+ * @run main/othervm -Djdk.attach.allowAttachSelf=true -Dcom.sun.management.jmxremote jdk.jfr.jmx.TestGetRecordings
  */
 public class TestGetRecordings {
     public static void main(String[] args) throws Throwable {
@@ -46,5 +44,11 @@ public class TestGetRecordings {
         JmxHelper.verifyNotExists(recId, preCreateRecordings);
         bean.closeRecording(recId);
         JmxHelper.verifyNotExists(recId, bean.getRecordings());
+
+        long selfPID = JmxHelper.getPID();
+        FlightRecorderMXBean remoteBean = JmxHelper.getFlighteRecorderMXBean(selfPID);
+        long remoteRecId = remoteBean.newRecording();
+        remoteBean.getRecordings();
+        remoteBean.closeRecording(remoteRecId);
     }
 }
