@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,7 @@
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm SupportedDHKeys
- * @run main/othervm SupportedDHKeys sm
+ * @run main/othervm -Djava.security.manager=allow SupportedDHKeys sm
  */
 
 import java.math.BigInteger;
@@ -109,14 +109,11 @@ public class SupportedDHKeys extends PKCS11Test {
         BigInteger leftOpen = BigInteger.ONE;
         BigInteger rightOpen = p.subtract(BigInteger.ONE);
 
-        // ignore the private key range checking on Solaris at present
-        if (!provider.getName().equals("SunPKCS11-Solaris")) {
-            BigInteger x = privateKey.getX();
-            if ((x.compareTo(leftOpen) <= 0) ||
-                    (x.compareTo(rightOpen) >= 0)) {
-                throw new Exception(
-                    "X outside range [2, p - 2]:  x: " + x + " p: " + p);
-            }
+        BigInteger x = privateKey.getX();
+        if ((x.compareTo(leftOpen) <= 0) ||
+            (x.compareTo(rightOpen) >= 0)) {
+            throw new Exception(
+                "X outside range [2, p - 2]:  x: " + x + " p: " + p);
         }
 
         BigInteger y = publicKey.getY();
