@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,8 +32,7 @@
  *      jdk.compiler/com.sun.tools.javac.util
  * @build toolbox.ToolBox toolbox.JavacTask
  * @build JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} CheckingTypeAnnotationsOnRecords.java
- * @run main/othervm --enable-preview CheckingTypeAnnotationsOnRecords
+ * @run main/othervm CheckingTypeAnnotationsOnRecords
  */
 
 import java.io.*;
@@ -88,7 +87,6 @@ public class CheckingTypeAnnotationsOnRecords extends TestRunner {
     }
 
     public static void main(String... args) throws Exception {
-        System.out.println(System.getProperties());
         new CheckingTypeAnnotationsOnRecords().runTests();
     }
 
@@ -145,10 +143,7 @@ public class CheckingTypeAnnotationsOnRecords extends TestRunner {
 
         for (Mode mode : new Mode[] {Mode.API}) {
             new JavacTask(tb, mode)
-                    .options("-nowarn",
-                            "-processor", Processor.class.getName(),
-                            "--enable-preview",
-                            "-source", Integer.toString(Runtime.version().feature()))
+                    .options("-nowarn", "-processor", Processor.class.getName())
                     .files(findJavaFiles(src))
                     .outdir(classes)
                     .run()
