@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -33,17 +31,16 @@ import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
 /**
- * VarargsRecordsTest
- *
  * @test
- * @compile --enable-preview -source ${jdk.version} VarargsRecordsTest.java
- * @run testng/othervm --enable-preview VarargsRecordsTest
+ * @bug 8246774
+ * @summary test for varargs record components
+ * @run testng VarargsRecordsTest
  */
 @Test
 public class VarargsRecordsTest {
-    record RI(int... xs) { }
-    record RII(int x, int... xs) { }
-    record RX(int[] xs) { }
+    public record RI(int... xs) { }
+    public record RII(int x, int... xs) { }
+    public record RX(int[] xs) { }
 
     RI r1 = new RI();
     RI r2 = new RI(1);
